--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,152 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Bebas Neue, sans-serif;
+    background-color: #221F1F;
+    color: #f5f5f1;
+    overflow-x: hidden;
+    font-size: 20px;
+    width: 100vw;
+  }
+
+  /* ----------ShowList---------- */
+
+  #heading {
+    width: 100vw;
+    text-align: center;
+    margin: 10px 0 60px 0;
+    font-size: 100px;
+    color: #E50914;
+  }
+
+  #grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 80px;
+    column-gap: 80px;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  #card {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+  }
+
+
+
+  #summary-btn {
+    padding: 10px;
+    background-color: #b81d24;
+    border: none;
+    font-family: Bebas Neue, sans-serif;
+    font-size: 15px;
+    border-radius: 5px;
+    color: #f5f5f1;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  #summary-btn:hover {
+    box-shadow: 5px 5px 50px #b81d24;
+  }
+
+  @media(max-width:786px) {
+    #grid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      row-gap: 80px;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  /* ----------ShowSummary---------- */
+
+  #show-name {
+    padding-left: 100px;
+    font-size: 50px;
+    color: #E50914;
+  }
+
+  #info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #show-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 1300px;
+    row-gap: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px grey, -5px -5px 20px grey;
+    transition: 0.5s;
+  }
+
+  #show-info:hover {
+    scale: 1.01;
+  }
+
+  #summary {
+    grid-column: 1/-1;
+  }
+
+  #img {
+    grid-row: span 4;
+  }
+
+
+  /* ----------Booking---------- */
+
+  input {
+    font-family: Bebas Neue, sans-serif;
+    width: 100%;
+    font-size: 20px;
+  }
+
+  #book-form {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+  }
+
+  #form {
+    padding: 20px;
+    width: 800px;
+    display: grid;
+    row-gap: 10px;
+    transition: 0.5s;
+  }
+
+  #form:hover {
+    box-shadow: 5px 5px 20px grey, -5px -5px 20px grey;
+    scale: 1.01;
+  }
+
+  .submit {
+    width: 80px;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    margin-top: 120px;
+    font-size: 15px;
+    background-color: #b81d24;
+  }
+
+  a {
+    text-decoration: none;
+    color: #f5f5f1;
+  }
+
+  
